--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -329,6 +329,9 @@ span.navbar-brand {
     align-items: center;
   }
 }
-a.pFonts.active {
-  padding-left: 24px;
+// a.pFonts.active {
+//   padding-left: 24px;
+// }
+a.pFonts {
+  padding-left: 20px;
 }
